# production_optimization_final_mlops

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
