[tool.poetry]
name = "production-optimization-final-mlops"
version = "0.1.0"
description = ""
authors = ["NColemann"]
license = "MIT"
readme = "README.md"
packages = [{include = "production_optimization_final_mlops"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
Sphinx = "^7.0.0"
coverage = "^7.2.5"
flake8 = "^6.0.0"
python-dotenv = ">=0.5.1"
pandas = "2.0.1"
numpy = "1.24.3"
seaborn = "0.11.1"
matplotlib = "3.7.1"
scikit-learn = "1.2.2"
catboost = "1.0.3"
lightgbm = "3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
